# xi-path

./: .gitignore  .gitmodules  Cargo.toml
backend/: Cargo.toml
backend/src/: lib.rs
dev/xi-editor-master/rust/core-lib/src/: client.rs  config.rs  event_context.rs  recorder.rs  tabs.rs  view.rs
frontend/: Cargo.toml
frontend/renderer/: Cargo.toml
frontend/renderer/src/: lib.rs  pathfinder_renderer.rs
frontend/src/: frontend.rs  lib.rs
src/: main.rs  session.rs
