[package]
name = "xi-path"
version = "0.1.0"
authors = ["Nick Spagnola <nicholas.a.spagnola@gmail.com>"]
edition = "2018"

[dependencies]
foreign-types = "0.3"
gl = "0.14"
metal = "0.18"
objc = "0.2"
sdl2 = "0.33"
sdl2-sys = "0.33"
font-kit = "0.6"

[patch.crates-io]
pathfinder_geometry = { path = "./frontend/renderer/pathfinder/geometry" }
pathfinder_simd = { path = "./frontend/renderer/pathfinder/simd" }

[dependencies.pathfinder_canvas]
features = ["pf-text"]
path = "./frontend/renderer/pathfinder/canvas"

[dependencies.pathfinder_color]
path = "./frontend/renderer/pathfinder/color"

[dependencies.pathfinder_content]
path = "./frontend/renderer/pathfinder/content"

[dependencies.pathfinder_geometry]
path = "./frontend/renderer/pathfinder/geometry"

[dependencies.pathfinder_gl]
path = "./frontend/renderer/pathfinder/gl"

[dependencies.pathfinder_gpu]
path = "./frontend/renderer/pathfinder/gpu"

[dependencies.pathfinder_metal]
path = "./frontend/renderer/pathfinder/metal"

[dependencies.pathfinder_renderer]
path = "./frontend/renderer/pathfinder/renderer"

[dependencies.pathfinder_resources]
path = "./frontend/renderer/pathfinder/resources"

[dependencies.pathfinder_text]
path = "./frontend/renderer/pathfinder/text"

[dependencies.skribo]
version = "0.1"
optional = true

[dependencies.xi-rope]
path = "./dev/xi-editor-master/rust/rope"

[dependencies.xi-core-lib]
path = "./dev/xi-editor-master/rust/core-lib"
default-features = false
features = []

[dependencies.frontend]
path = "./frontend"