[package]
name = "frontend"
version = "0.1.0"
authors = ["Nick Spagnola <nicholas.a.spagnola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.xi-core-lib]
path = ".././dev/xi-editor-master/rust/core-lib"
default-features = false
features = []