[package]
# todo - change to xi-path-frontend
name = "frontend"
version = "0.1.0"
authors = ["Nick Spagnola <nicholas.a.spagnola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.33"
sdl2-sys = "0.33"

[dependencies.xi-path-renderer]
path = "./renderer"

[dependencies.xi-core-lib]
path = ".././backend/xi/rust/core-lib"
default-features = false
features = []